# numan

./: .pre-commit-config.yaml  Dockerfile  INSTRUCTIONS.md  README.md  docker-compose.yml  initial_data.json  manage.py  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: django.yml
main/: admin.py  authentication.py  models.py  serializers.py  tests.py  urls.py  views.py  viewsets.py
main/constants/: blood_tests.py
main/integrations/: ip_geolocation.py
main/migrations/: 0001_initial.py  0002_lab.py  0003_bloodtestresults_lab.py  0004_customtoken.py
main/tests/: factories.py  test_models.py  test_views.py  test_viewsets.py
main/tests/integrations/: test_ip_geolocation.py
misc/: DELETEME
numan_python_takehome/: settings.py  urls.py  wsgi.py
