[tool.poetry]
name = "numan_python_takehome"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.8.1"
django = ">=3.2"
psycopg2-binary = "^2.9.9"
pytest = "^7.4.3"
python-dotenv = "*"
django-countries = "^7.5.1"
factory-boy = "^3.3.0"
pytest-django = "^4.7.0"
djangorestframework = "^3.14.0"

[tool.poetry.group.extras.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
